cabal-version:      2.4
name:               haskell-twitch-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    default-extensions:     TemplateHaskell
                            , TypeApplications
                            , TypeOperators
                            , OverloadedStrings
                            , LambdaCase
    hs-source-dirs:     src/
    default-language:   Haskell2010
    ghc-options:
                            -Wall
                            -fno-warn-name-shadowing
                            -fno-warn-unticked-promoted-constructors
                            -fno-warn-orphans

    build-depends:      base ^>=4.17
                        , aeson
                        , text
                        , http-api-data
                        , http-types
                        , servant
                        , servant-client
                        , data-default

    exposed-modules:    Twitch
                        , Twitch.EventSub
                        , Twitch.EventSub.Event
                        , Twitch.EventSub.Notification
                        , Twitch.Rest
                        , Twitch.Rest.Authorization
                        , Twitch.Rest.Authentication
                        , Twitch.Rest.DataResponse
                        , Twitch.Rest.Types
                        , Twitch.Mock

    other-modules:      Twitch.Rest.Token
                        , Twitch.EventSub.Condition
                        , Twitch.EventSub.Request
                        , Twitch.EventSub.Response
                        , Twitch.EventSub.Transport
                        , Twitch.EventSub.BitsVoting
                        , Twitch.EventSub.ChannelPointsVoting
                        , Twitch.EventSub.Choices
                        , Twitch.EventSub.EntitlementObject
                        , Twitch.EventSub.GlobalCooldown
                        , Twitch.EventSub.Image
                        , Twitch.EventSub.Contribution
                        , Twitch.EventSub.Message
                        , Twitch.EventSub.Outcomes
                        , Twitch.EventSub.Poll
                        , Twitch.EventSub.Product
                        , Twitch.EventSub.Reward
